@@ -1,0 +1,8 @@
+test-tocdepth
+=============
+
+.. toctree::
+   :numbered:
+
+   foo
+   bar
